# StereoVision

./: CMakeLists.txt
calibration/: CMakeLists.txt  calib_intrinsic.cpp  calib_stereo.cpp  rectify_stereo.cpp
denseCensusStereo/: CMakeLists.txt  CensusTransform.cpp  CensusTransform.h  denseCensusStereo.cpp
elas/: CMakeLists.txt  triangle.cpp
elas-example/: CMakeLists.txt  main.cpp
highPerfStereo/: BallGroundTruth.cpp  BallGroundTruth.h  CMakeLists.txt  GroundThruth.cpp  GroundThruth.h  GroundTruth.cpp  GroundTruth.h  PerformanceEvaluator.cpp  PerformanceEvaluator.h  ballErrorEstimation.cpp  errorCurve.cpp  highPerfStereo.cpp  highPerfStereoLib.cpp  highPerfStereoLib.h  main.cpp  planeErrorEstimation.cpp  singleStereo.cpp  stereoDiscretization.cpp  stereoExample.cpp
highPerfStereoLib/: CMakeLists.txt  highPerfStereoClasses.cpp  highPerfStereoClasses.h  highPerfStereoFunctions.cpp  highPerfStereoFunctions.h
linear-system-solving/: CMakeLists.txt  CramerTheorem.cpp  CramerTheorem.h  Matrix.cpp  Matrix.h  README.md  main.cpp
plane/: CMakeLists.txt  Plane.cpp  Plane.h
plane-unit-test/: CMakeLists.txt  plane-unit-test.cpp
pointCloudGeneration/: CMakeLists.txt  pointCloudGeneration.cpp
sparsestereo/: sparsestereo-inl.h
sparsestereo-example/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  tests.cpp
triangulation-example/: CMakeLists.txt  triangulation-example.cpp
